# account-register

./: .gitignore  README.md  config.example.toml  main.py  pyproject.toml
core/: grok_register.py  openai_register.py  qwen_register.py
service/: __init__.py  base_mail_service.py  config_service.py  cpa_service.py  freemail_service.py  gmail_service.py  http_service.py  luckmail_service.py  mail_service.py
service/mail/: duckmail_service.py  firefoxrelay_service.py  freemail_service.py  gmail_service.py  luckmail_service.py  mail_factory.py
util/: __init__.py  account_util.py  logger.py  openai_register_util.py  pydoll_util.py
